services/exechost-deployment/exechost-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: exechost-network-policy
  namespace: darklang
spec:
  policyTypes:
    - Egress
    # No ingress
  podSelector:
    matchLabels:
      app: exechost-app
  egress:
    # Allow dns access
    - to:
        - namespaceSelector: { }
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53

    # Allow access to Cloud SQL
    - to:
        - ipBlock:
            cidr: 35.203.144.131/32
      ports:
        - protocol: TCP
          port: 3307 # port cloudsqlproxy uses

    - to:
        # Allow access to the internet at large
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.0.0/16
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 127.0.0.0/8
